适应jigsaw版本更新

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "Jigsaw Tourist",
+  "name": "Jigsaw-Tourist",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --poll 500 --proxy-config proxy-config.json",
+    "start": "ng serve --poll 500 --proxy-config proxy-config.json --port 4211",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -48,9 +48,10 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
