--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@rdkmaster/jigsaw": "^1.1.0-beta.1",
     "@angular/animations": "^5.0.0-rc.0",
     "@angular/common": "^5.0.0-rc.0",
     "@angular/compiler": "^5.0.0-rc.0",
@@ -21,7 +22,6 @@
     "@angular/platform-browser-dynamic": "^5.0.0-rc.0",
     "@angular/router": "^5.0.0-rc.0",
     "@ngx-translate/core": "~v8.0.0",
-    "@rdkmaster/jigsaw": "^1.1.0-beta.1",
     "core-js": "~2.5.1",
     "ngx-perfect-scrollbar": "~5.0.0-7",
     "rxjs": "~5.4.0",
@@ -35,6 +35,9 @@
     "@types/jasmine": "~2.5.45",
     "@types/node": "~7.0.43",
     "codelyzer": "~3.0.1",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.47",
+    "font-awesome": "~4.7.0",
+    "jquery": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -43,7 +46,6 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "~0.2.2",
     "karma-coverage-istanbul-reporter": "~1.2.1",
-    "jquery": "~3.1.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.3.2",
