--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "zone.js": "~0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "~1.4.4",
+    "@angular/cli": "~1.5.0-rc.3",
     "@angular/compiler-cli": "^5.0.0-rc.0",
     "@angular/language-service": "^5.0.0-rc.0",
     "@types/jasmine": "~2.5.45",
