--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
   "private": true,
   "dependencies": {
     "@rdkmaster/jigsaw": "^1.1.0-beta.1",
-    "@angular/animations": "^5.0.0-rc.0",
-    "@angular/common": "^5.0.0-rc.0",
-    "@angular/compiler": "^5.0.0-rc.0",
-    "@angular/core": "^5.0.0-rc.0",
-    "@angular/forms": "^5.0.0-rc.0",
-    "@angular/platform-browser": "^5.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.0",
-    "@angular/router": "^5.0.0-rc.0",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@ngx-translate/core": "~v8.0.0",
     "core-js": "~2.5.1",
-    "ngx-perfect-scrollbar": "5.0.0-7",
-    "rxjs": "~5.4.0",
+    "ngx-perfect-scrollbar": "~5.0.2",
+    "rxjs": "~5.5.0",
     "web-animations-js": "~2.3.1",
     "zone.js": "~0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "~1.5.0-rc.3",
-    "@angular/compiler-cli": "^5.0.0-rc.0",
-    "@angular/language-service": "^5.0.0-rc.0",
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.45",
     "@types/node": "~7.0.43",
     "codelyzer": "~3.0.1",
@@ -49,6 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.5.3"
+    "typescript": "2.4.2"
   }
 }
