--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@rdkmaster/jigsaw": "^1.1.0-beta.1",
+    "@rdkmaster/jigsaw": "^8.0.0",
     "@angular/animations": "~5.0.2",
     "@angular/common": "~5.0.2",
     "@angular/compiler": "~5.0.2",
@@ -23,10 +23,12 @@
     "@angular/router": "~5.0.2",
     "@ngx-translate/core": "~v8.0.0",
     "core-js": "~2.5.1",
+    "echarts": "~4.1.0",
     "ngx-perfect-scrollbar": "~5.0.2",
     "rxjs": "~5.5.0",
     "web-animations-js": "~2.3.1",
     "zone.js": "~0.8.18",
+    "ztree": "~3.5.24",
     "jszip": "3.2.1",
     "file-saver": "~2.0.1"
   },
