--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@rdkmaster/jigsaw": "^8.0.0",
+    "@rdkmaster/icon-font": "^1.0.6",
     "@angular/animations": "~5.0.2",
     "@angular/common": "~5.0.2",
     "@angular/compiler": "~5.0.2",
