--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "dependencies": {
     "@rdkmaster/jigsaw": "~9.0.0-beta1",
     "@rdkmaster/icon-font": "^1.0.6",
-    "@angular/animations": "~9.0.0-rc.7",
-    "@angular/common": "~9.0.0-rc.7",
-    "@angular/compiler": "~9.0.0-rc.7",
-    "@angular/core": "~9.0.0-rc.7",
-    "@angular/forms": "~9.0.0-rc.7",
-    "@angular/platform-browser": "~9.0.0-rc.7",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.7",
-    "@angular/router": "~9.0.0-rc.7",
+    "@angular/animations": "~9.1.4",
+    "@angular/common": "~9.1.4",
+    "@angular/compiler": "~9.1.4",
+    "@angular/core": "~9.1.4",
+    "@angular/forms": "~9.1.4",
+    "@angular/platform-browser": "~9.1.4",
+    "@angular/platform-browser-dynamic": "~9.1.4",
+    "@angular/router": "~9.1.4",
     "@ngx-translate/core": "~11.0.1",
     "core-js": "~3.0.1",
     "echarts": "~4.1.0",
@@ -34,10 +34,10 @@
     "file-saver": "~2.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.7",
-    "@angular/cli": "~9.0.0-rc.7",
-    "@angular/compiler-cli": "~9.0.0-rc.7",
-    "@angular/language-service": "~9.0.0-rc.7",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "~9.1.4",
+    "@angular/compiler-cli": "~9.1.4",
+    "@angular/language-service": "~9.1.4",
     "@types/jasmine": "~2.5.45",
     "@types/node": "~12.11.1",
     "codelyzer": "~5.1.2",
@@ -53,6 +53,7 @@
     "karma-jasmine-html-reporter": "~0.2.2",
     "karma-coverage-istanbul-reporter": "~1.2.1",
     "protractor": "~5.4.0",
+    "stream": "0.0.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.6.4"
