--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@ngx-translate/core": "~11.0.1",
+    "@rdkmaster/icon-font": "~1.0.6",
     "@rdkmaster/jigsaw": "~8.0.0",
     "core-js": "~3.0.1",
     "echarts": "~4.7.0",
@@ -32,7 +33,9 @@
     "rxjs": "~6.4.0",
     "web-animations-js": "~2.3.2",
     "zone.js": "~0.9.1",
-    "ztree": "~3.5.24"
+    "ztree": "~3.5.24",
+    "jszip": "3.2.1",
+    "file-saver": "~2.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
