去掉原第三方日期选择器之后，moment库需要自己加上

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "~11.0.1",
     "core-js": "~3.0.1",
     "echarts": "~4.1.0",
+    "moment": "~2.22.2",
     "ngx-perfect-scrollbar": "~8.0.0",
     "rxjs": "~6.5.3",
     "web-animations-js": "~2.3.2",
