--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "echarts": "~4.1.0",
     "moment": "~2.22.2",
     "ngx-perfect-scrollbar": "~8.0.0",
+    "ngx-color-picker": "~8.0.0",
     "rxjs": "~6.5.3",
     "web-animations-js": "~2.3.2",
     "zone.js": "~0.10.2",
